# airdeck

./: .env.example  .gitignore  README.md  pyproject.toml
src/airdeck/: __init__.py  config.py  logging_setup.py  main.py
src/airdeck/budget/: __init__.py  counters.py  limiter.py
src/airdeck/camera/: __init__.py  frame_queue.py  gesture_feedback.py  preview.py  producer.py
src/airdeck/gestures/: __init__.py  mappings.py  state_machine.py
src/airdeck/lifecycle/: __init__.py  shutdown.py
src/airdeck/overshoot/: __init__.py  client.py  inference.py  models.py  publisher.py  runtime.py  schemas.py  stream.py
src/airdeck/ui/: __init__.py  app.py
tests/: __init__.py
tests/unit/: test_budget.py  test_config.py  test_frame_queue.py  test_gesture_feedback.py  test_gesture_state_machine.py  test_logging_setup.py  test_overshoot_client.py  test_overshoot_inference.py  test_overshoot_publisher.py  test_overshoot_runtime.py  test_overshoot_schemas.py  test_overshoot_stream.py  test_preview.py  test_producer.py  test_shutdown.py  test_telemetry.py
